# tensorus

./: .dockerignore  .env.development  .env.example  .gitignore  AUTHENTICATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  Dockerfile  EXECUTIVE_SUMMARY.md  GA_MASTER_BLUEPRINT.md  INVESTIGATION_README.md  INVESTIGATION_REPORT.md  LICENSE  PRACTICAL_FIXES_REQUIRED.md  README.md  README_simple.md  TENSOR_OPERATIONS_API_README.md  api.py  app.py  apprunner.yaml  automl_agent.py  benchmark_results.json  check_binary.py  check_env.py  check_file.py  check_file2.py  check_imports.py  debug_core.py  debug_file.py  debug_storage.py  docker-compose.yml  dummy_env.py  generate_api_key.py  index.js  ingestion_agent.py  mkdocs.yml  nql_agent.py  package.json  pydantic_settings.py  (+48 more)
.claude/: settings.local.json
benchmarks/: benchmark_suite.py
demo/: mcp_client_app.py  mcp_client_demo.ipynb  mcp_client_requirements.txt
docs/: README.md  api_guide.md  api_reference.md  compression_implementation.md  executive_overview.md  gap_10_models_repository_irrelevant.md  getting_started.md  index.md  installation.md  mcp_client.md  metadata_schemas.md  performance_benchmarks.md  production_deployment.md  tensor_database_gaps_assessment.md  user_guide.md  vector_database_guide.md  whitepaper.md
examples/: README.md  advanced_features_demo.py  advanced_usage.py  api_integration_examples.py  basic_usage.py  complete_workflow_example.py  compression_demo.py  real_world_tutorials.py  simple_usage.py  storage_ops_demo.py  tensor_operations_comprehensive.py  use_case_guides.py
kubernetes/: deployment.yaml
mcp_tensorus_server/: package.json  server.js  server.test.js  setup.sh
operation_cache/: cache_metadata.pkl
pages/: 1_Dashboard.py  1_📊_Dashboard.py  2_Control_Panel.py  2_🕹️_Control_Panel.py  3_NQL_Chatbot.py  3_💬_NQL_Chatbot.py  4_Data_Explorer.py  4_🔍_Data_Explorer.py  5_API_Playground.py  5_🚀_API_Playground.py  6_Financial_Forecast_Demo.py  api_client.py  api_playground_v2.py  control_panel_v2.py  data_explorer_v2.py  nql_chatbot_v2.py  pages_shared_utils.py  temp_api_playground.py  temp_control_panel.py  temp_dashboard.py  temp_data_explorer.py  temp_nql_chatbot.py  ui_utils.py
tensor_data/: count_ds.pt  default.pt  operations.pt  sdk_test.pt  test_dataset.pt  test_dataset_0c10b998.pt  test_dataset_f5c3c969.pt  test_dataset_ingest_5dde494e-54cd-4fbc-bc87-e5949cc3809e.pt  test_dataset_ingest_743ec0f5-c46c-42b3-92fd-5b8e504b147c.pt  test_dataset_ingest_d17cec44-8f9f-4856-a343-3ef700784edb.pt  test_dataset_ingest_f3e79d98-6fb4-496d-9763-f0ce3aa1c801.pt  test_dataset_integration_69bf9dbf-0ef4-4dd7-ba2d-6ba3bf31b799.pt  test_dataset_workflow_results.pt
tensorus/: __init__.py  agent_orchestrator.py  api.py  app.py  audit.py  automl_agent.py  base.py  cli.py  compression.py  config.py  dummy_env.py  embedding_agent.py  financial_data_generator.py  hybrid_search.py  indexing.py  ingestion_agent.py  init.py  llm_parser.py  mcp_client.py  mcp_server.py  nql_agent.py  operation_history.py  rl_agent.py  sdk.py  storage_ops.py  storage_ops_with_history.py  tensor_chunking.py  tensor_chunking_enhanced.py  tensor_decompositions.py  tensor_embeddings.py  tensor_operation_api.py  tensor_operations.py  tensor_operations_integrated.py  tensor_ops.py  tensor_storage.py  tensor_storage_backup.py  tensor_streaming_pipeline.py  tensorus.py  tensorus_operational_core.py  time_series_predictor.py  (+4 more)
tensorus-v1/: .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  tensorus.toml
tensorus-v1/.github/workflows/: ci.yml
tensorus-v1/crates/tensorus-ai/: Cargo.toml
tensorus-v1/crates/tensorus-ai/src/: agent.rs  lib.rs  llm.rs  nql.rs  optimizer.rs  providers.rs  router.rs
tensorus-v1/crates/tensorus-api/: Cargo.toml
tensorus-v1/crates/tensorus-api/benches/: tensorus_bench.rs
tensorus-v1/crates/tensorus-api/src/: index.rs  lib.rs  llm_http.rs  replication.rs  rest.rs  service.rs  telemetry.rs  tenancy.rs  tools.rs
tensorus-v1/crates/tensorus-api/tests/: integration.rs
tensorus-v1/crates/tensorus-compute/: Cargo.toml
tensorus-v1/crates/tensorus-compute/src/: descriptor.rs  lib.rs
tensorus-v1/crates/tensorus-core/: Cargo.toml
tensorus-v1/crates/tensorus-core/src/: arrow_bridge.rs  error.rs  lib.rs  traits.rs  types.rs
tensorus-v1/crates/tensorus-index/: Cargo.toml
tensorus-v1/crates/tensorus-index/src/: alex.rs  diskann.rs  hnsw.rs  lib.rs  metadata.rs  pgm.rs
tensorus-v1/crates/tensorus-python/: Cargo.toml
tensorus-v1/crates/tensorus-python/src/: bindings.rs  lib.rs
tensorus-v1/crates/tensorus-search/: Cargo.toml
tensorus-v1/crates/tensorus-search/src/: contraction.rs  lib.rs
tensorus-v1/crates/tensorus-storage/: Cargo.toml
tensorus-v1/crates/tensorus-storage/src/: compression.rs  format.rs  lib.rs  segment.rs  tests.rs  tiering.rs  wal.rs
tensorus-v1/deploy/: README.md
tensorus-v1/deploy/helm/tensorus/: Chart.yaml  values.yaml
tensorus-v1/deploy/helm/tensorus/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
tensorus-v1/docs/: README.md  api-reference.md  architecture.md  configuration.md  data-model.md  serving_guide.md
tensorus-v1/docs/services/: tensorus-ai.md  tensorus-api.md  tensorus-compute.md  tensorus-core.md  tensorus-index.md  tensorus-python.md  tensorus-search.md  tensorus-storage.md
tensorus-v1/proto/: tensorus.proto
tensorus-v1/python/: README.md  pyproject.toml
tensorus-v1/python/tensorus/: __init__.py  _native.pyi
tensorus-v1/python/tests/: test_sdk.py
tests/: conftest.py  test_analytics_api.py  test_anomaly_models.py  test_api.py  test_api_query_llm.py  test_api_tensor_operations.py  test_auth_integration.py  test_basic.py  test_boosting_models.py  test_cnn_models.py  test_compression.py  test_config.py  test_cv_wrappers.py  test_dashboard_metrics.py  test_dataset_api.py  test_dataset_count_api.py  test_embedding_agent.py  test_embedding_and_ner.py  test_foundation_models.py  test_generative_models.py  test_graph_models.py  test_indexing.py  (+38 more)
(+170 files in other folders)
