[project]
name = "tensorus"
version = "0.0.4"
authors = [
    { name = "Tensorus Team", email = "ai@tensorus.com" }
]
description = "An agentic tensor database and agent framework for managing, querying, and automating tensor data workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
    "tensor", "database", "agent", "ai", "pytorch", "fastapi", "streamlit", "automl", "reinforcement-learning", "data-ingestion"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries"
]
[project.urls]
Homepage = "https://tensorus.com"
Repository = "https://github.com/tensorus/tensorus"

[project.optional-dependencies]
models = ["tensorus-models>=0.0.3"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorus*"]
namespaces = false
