[workspace]
resolver = "2"
members = [
    "crates/tensorus-core",
    "crates/tensorus-storage",
    "crates/tensorus-index",
    "crates/tensorus-compute",
    "crates/tensorus-search",
    "crates/tensorus-ai",
    "crates/tensorus-api",
    "crates/tensorus-python",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/tensorus/tensorus"
authors = ["Tensorus Contributors"]

[workspace.dependencies]
# Internal crates
tensorus-core = { path = "crates/tensorus-core" }
tensorus-storage = { path = "crates/tensorus-storage" }
tensorus-index = { path = "crates/tensorus-index" }
tensorus-compute = { path = "crates/tensorus-compute" }
tensorus-search = { path = "crates/tensorus-search" }
tensorus-ai = { path = "crates/tensorus-ai" }
tensorus-api = { path = "crates/tensorus-api" }

# Shared third-party (pure-Rust only; no C-compiler dependencies in this environment)
uuid = { version = "1", features = ["v7", "v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
ndarray = "0.16"
nalgebra = "0.33"
arrow-array = "53"
arrow-buffer = "53"
arrow-schema = "53"
tracing = "0.1"
parking_lot = "0.12"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
