[package]
name = "tensorus-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Model-agnostic LLM router, neural query language, and ReAct agent"

[dependencies]
tensorus-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
