[package]
name = "tensorus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, traits, and error definitions for Tensorus v1.0"

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true

[dev-dependencies]
serde_json.workspace = true
