[package]
name = "tensorus-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Durable tiered storage engine with write-ahead logging"

[dependencies]
tensorus-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
uuid.workspace = true
nalgebra.workspace = true
flate2 = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
rand.workspace = true
